# voice-ai-ssas

./: .env.example  .gitIgnore  README.md  main.py  pyproject.toml
backend/: __init__.py  config.py  database.py  main.py
backend/models/: __init__.py  business.py  knowledge_base.py  phone_number.py  voice_assistant.py
backend/routes/: __init__.py  business.py  config.py  knowledge_base.py  onboarding.py  phone_numbers.py  voice_assistant.py
backend/services/: __init__.py  storage_service.py  twilio_service.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/[businessId]/: page.tsx
frontend/app/dashboard/components/: OnboardingStepper.tsx  StepIndicator.tsx  index.ts
frontend/app/dashboard/components/BusinessRegistration/: BusinessRegistrationConfig.ts  index.tsx
frontend/app/dashboard/components/Home/: BusinessCard.tsx  BusinessList.tsx  index.tsx
frontend/app/dashboard/components/KnowledgeBaseUpload/: FileDropzone.tsx  KnowledgeBaseConfig.ts  index.tsx
frontend/app/dashboard/components/PhoneNumberSelection/: PhoneNumberCard.tsx  PhoneNumberConfig.ts  index.tsx
frontend/app/dashboard/components/Sidebar/: CreateBusinessButton.tsx  SidebarConfig.tsx  (+5 more)
frontend/app/dashboard/store/: businessStore.ts  configStore.ts  onboardingStore.ts  sidebarStore.ts
frontend/landing-page/: Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  TrustedBy.tsx  index.ts
frontend/utils/: api.ts  breakpoints.ts  index.ts  responsive.ts  useMediaQuery.ts
(+3 files in other folders)
