[project]
name = "voice-ai-saas"
version = "0.1.0"
description = "Voice AI SaaS - AI-powered voice agents for modern business"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.18",
    "aiofiles>=24.1.0",
    "twilio>=9.3.0",
]

[project.scripts]
voice-ai = "backend.main:app"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]
